Make main page without adaptive (#8)
* make header, feature, categories main-page

* save

* make main-page

* make main-page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,318 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*!******************************/
+/*RESET*/
+/********************************/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol, ul {
+    list-style: none;
+}
+
+blockquote, q {
+    quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+
+
+.container{
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+/*/!******************************************************************/
+/*//HEADER BLOCK*/
+/*/!******************************************************************/
+
+
+.header-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px 0;
+}
+
+.logo {
+  width: 120px;
+  height: 22px;
+  margin-right: 41px;
+}
+
+.main-menu-list{
+  display: flex;
+}
+
+.main-menu-item{
+  margin-right: 54px;
+  position: relative;
+}
+
+.main-menu-item::after{
+  content: url("./img/arrow.png");
+  position: absolute;
+  right: -20px;
+}
+
+.main-menu-item:last-child{
+  margin-right: 0px;
+}
+
+.main-menu-link{
+  font-family: OpenSans, sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+  color: #33333a;
+  text-transform: uppercase;
+}
+
+.arrow{
+  width: 16px;
+  height: 16px;
+}
+
+.main-right{
+  display: flex;
+  justify-content: flex-end;
+  /* max-width: 450px; */
+  width: 60%;
+}
+
+.main-search {
+  max-width: 224px;
+  width: 100%;
+  opacity: 0.2;
+  border-radius: 16px;
+  background-color: #d8d8d8;
+  padding: 4px 0 4px 19px;
+  font-family: OpenSans, sans-serif;
+  font-size: 12px;
+  letter-spacing: 1px;
+  color: #33333a;
+  border: none;
+  outline: none;
+
+  margin-right: 25px;
+}
+
+.location-person,
+.account-person{
+  margin-right: 21px;
+}
+
+
+/*/!******************************************************************/
+/*//SECTION FEATURED*/
+/*/!******************************************************************/
+
+
+.section-featured{
+  padding-top: 50px;
+  background-color: #fcfcfc;
+}
+.featured-title{
+  font-family: OpenSans, sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+  color: #33333a;
+  margin-bottom: 40px;
+}
+
+.featured-list{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.featured-item{
+  width: 263px;
+  text-align: center;
+  margin-bottom: 40px;
+  display: block;
+  padding: 15px;
+
+  /*box-shadow: 0 0px 18px 0 rgba(0, 0, 0, 0.05);*/
+  /*border: 15px solid red;*/
+}
+
+.featured-item:hover{
+  /*width: calc(263px + 30px);*/
+  background-color: #fff;
+  /*border: 15px solid #fcfcfc;*/
+}
+
+.featured-img{
+  width: 100%;
+  max-width: 263px;
+}
+
+.featured-name{
+  font-family: OpenSans, sans-serif;
+  font-size: 16px;
+  color: #33333a;
+  padding: 12px 20px 5px;
+  line-height: 1.38;
+}
+
+.featured-price{
+  font-family: OpenSans, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  color: #33333a;
+}
+
+/*/!******************************************************************/
+/*// SECTION SHOP*/
+/*/!******************************************************************/
+
+
+.shop-category{
+  padding-top: 38px;
+}
+
+.category-title{
+  font-family: OpenSans, sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+  color: #33333a;
+  margin-bottom: 28px;
+}
+
+.category-list{
+  display: flex;
+  justify-content: space-between;
+}
+
+.category-item{
+  width: 263px;
+  position: relative;
+}
+
+.category-item:hover .category-link{
+  display: block;
+}
+
+.category-name{
+  position: absolute;
+  font-family: OpenSans, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  color: #030303;
+  padding: 13px 0;
+  background-color: #fff;
+  bottom: 60px;
+  width: 100%;
+}
+
+.category-link{
+  font-family: OpenSans, sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color: #31363d;
+  padding: 11px 50px;
+  border-radius: 25px;
+  position: absolute;
+  top: 50%;
+  left: 38px;
+  display: none;
+}
+
+/***********************************************
+*SECTION SUBSCRIBE
+*************************************************/
+.section-subscribe{
+    padding: 65px 0;
+}
+
+.subscribe{
+    display: flex;
+    align-items: center;
+}
+
+.subscribe-title{
+    font-family: OpenSans, sans-serif;
+    font-size: 38px;
+    font-weight: 600;
+    color: #31363d;
+    margin-right: 15px;
+}
+
+.subscribe-description{
+    width: 243px;
+    font-family: OpenSans, sans-serif;
+    font-size: 14px;
+    line-height: 1.36;
+    color: #31363d;
+}
+.subscribe-form{
+    display: flex;
+}
+.subscribe-btn{
+    max-width: 300px;
+    width: 90%;
+    padding: 12px 0;
+    border-radius: 100px;
+    background-color: #33333a;
+
+    font-family: OpenSans, sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    text-align: center;
+    letter-spacing: 1.4px;
+    text-transform: uppercase;
+    color: #ffffff;
+    border: none;
+    outline: none;
+    cursor: pointer;
 }
