--- a/client/src/scss/_mainPage.scss
+++ b/client/src/scss/_mainPage.scss
@@ -31,7 +31,7 @@
 }
 
 .main-menu-item::after{
-  content: url("../img/arrow.png");
+  content: url("../../public/img/arrow.png");
   position: absolute;
   right: -20px;
 }
