--- a/client/src/components/TopBlockAuth/LoginForm/LoginForm.scss
+++ b/client/src/components/TopBlockAuth/LoginForm/LoginForm.scss
@@ -1,100 +1,110 @@
 .login-menu{
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
   align-items: center;
+  margin: auto;
 
   position: absolute;
-  top: 50px;
-  right: 316px;
+  top: 0; left: 0; bottom: 0; right: 0;
   z-index: 1;
 
-  width: 320px;
-  height: 145px;
+  width: 615px;
+  height: 606px;
+
   font-size: 14px;
+  border: 1px solid black;
+  background-color: #fff;
+  color: #030303;
 
-  border: 1px solid #666666;
-  border-radius: 15px;
-  background-color: rgba(255, 255, 255, 0.9);
-
-  margin: 10px;
+  .cancel-btn{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: url("https://img.icons8.com/ios/50/000000/delete-sign.png") no-repeat;
+    background-position: 7.5px 7px;
+    background-size: 15px;
+    background-color: rgba(0, 0, 0, 0.08);
+    align-self: flex-end;
+    margin: 15px 15px 0;
+    cursor: pointer;
+  }
+  .login-menu_header{
+    width: 555px;
+    font-size: 32px;
+    font-weight: bold;
+    line-height: 1.34;
+    text-align: center;
+  }
+  .login-menu_par{
+    width: 323px;
+    height: 44px;
+    font-size: 14px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.57;
+    letter-spacing: normal;
+    text-align: center;
+    color: #33333a;
+    margin-top: 20px;
+  }
   &_form{
     display: flex;
-    &-text{
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      width: 90px;
-      padding-left: 20px;
-      font-size: 12px;
+    margin-top: 40px;
+    .form-email_par{
+      width: 323px;
+      height: 22px;
+      font-size: 14px;
     }
     &-fields{
-      width: 210px;
+      width: 396px;
       input{
-        height: 20px;
-        width: 170px;
+        width: 396px;
+        height: 40px;
 
-        margin: 5px 0px 5px 0;
+        margin: 5px 0px 15px 0;
         padding-left: 10px;
 
         border: 1px solid #eaeaea;
-        border-radius: 15px;
         outline: none;
       }
     }
-  }
-  &_buttons{
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    height: 30px;
-    margin: 5px 0;
-    .enter-btn{
+    .form-pass_par{
+      width: 323px;
       height: 22px;
-      width: 120px;
+      font-size: 14px;
+    }
+  }
+    .enter_btn{
+      width: 270px;
+      height: 50px;
+      border-radius: 25px;
+      background-color: #33333a;
 
-      border: 1px solid #eaeaea;
-      border-radius: 20px;
+      border: 1px solid #33333a;
 
       text-align: center;
       cursor: pointer;
-      padding-top: 8px;
-
-    }
-    .logIn{
-      background-color: #3cb878;
-      border-color: #329a65;
+      padding-top: 17px;
       color: #fff;
-      &:hover{
-        background-color: #329a65;
-        border-color: #329a2d;
-      }
+      text-transform: uppercase;
+      margin-top: 40px;
     }
-    .signUp:hover{
-      background-color: #fff;
-    }
-  }
-  .getAccount{
+  .registration-area{
     width: 100%;
-    font-size: 10px;
-    margin: 7px 20px 5px 0;
-    text-align: right;
-  }
-  &:before{
-    content: "";
-    display: block;
-    width: 0;
-    height: 0;
-    border-right: 12px solid transparent;
-    border-top: 12px solid transparent;
-    border-left: 12px solid #666666;
-    position: absolute;
-    transform: rotate(135deg);
-    top: -2px;
-    right: 146px;
+    background-color: rgba(0, 0, 0, 0.08);
+    height: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 35px;
+    .register_btn{
+      margin-top: 0;
+      background-color: rgba(0, 0, 0, 0.08);
+      color: #33333a;
+    }
   }
 }
-
 .d-none {
   display: none;
 }
