--- a/client/src/components/atomic/BtnAddToCart/btn-add-to-cart.scss
+++ b/client/src/components/atomic/BtnAddToCart/btn-add-to-cart.scss
@@ -1,4 +1,4 @@
-@import "resources/resources";
+@import '../../scss/resources/resources';
 
 .btn-add-to-cart {
 	@include clear-default-inputs-style;
