--- a/client/src/scss/resources/_variables.scss
+++ b/client/src/scss/resources/_variables.scss
@@ -1,4 +1,4 @@
-$font-openSans: "OpenSans", sans-serif;
+$font-openSans: 'OpenSans', sans-serif;
 $black: #33333a;
 $grey-light: #d8d8d8;
 $grey-bg: #f3f3f3;
