--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -1,4 +1,8 @@
+@import "resources/resources";
 @import "reset";
-@import "variables";
-@import "mainPage";
-
+@import "base";
+@import "breadcrumbs";
+@import "productPage";
+@import "basket";
+@import "search";
+@import "cardProduct";
