--- a/client/src/components/ProductListing/ProductListing.scss
+++ b/client/src/components/ProductListing/ProductListing.scss
@@ -1,3 +1,5 @@
+@import '../../scss/resources/resources';
+
 .section-listing-products {
   padding-top: 50px;
   background-color: #fcfcfc;
@@ -5,24 +7,24 @@
 
 .listing {
   &-title {
-    //font-family: $font-openSans;
+    font-family: $font-openSans;
     font-size: 40px;
     font-weight: bold;
     text-align: center;
-    color: #33333a;  //$black;
+    color: $black;
     margin-bottom: 40px;
   }
 
   &-products {
-    //@include flex-wrap-between;
+    @include flex-wrap-between;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-    //@include max-width($landscape-tablet) {
-    //  justify-content: space-around;
-    //  align-items: center;
-    //  margin: 0 auto;
-    //}
+    @include max-width($landscape-tablet) {
+      justify-content: space-around;
+      align-items: center;
+      margin: 0 auto;
+    }
   }
 }
