--- a/client/src/components/Header/NavMenu/navMenu.scss
+++ b/client/src/components/Header/NavMenu/navMenu.scss
@@ -117,10 +117,10 @@ q {
   quotes: none;
 }
 
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
+blockquote::before,
+blockquote::after,
+q::before,
+q::after {
   content: "";
   content: none;
 }
@@ -251,7 +251,7 @@ $landscape-desktop: 1200px;
     }
 
     &:last-child {
-      margin-right: 0px;
+      margin-right: 0;
     }
 
     @include max-width($landscape-tablet) {
@@ -283,22 +283,24 @@ $landscape-desktop: 1200px;
   background-color: #fff;
 
   @include max-width($landscape-tablet) {
-    background-color: #eeeeee;
+    background-color: #eee;
   }
 }
 
 .sub-menu-wrapper-inner {
   @include flex-between;
+
   padding: 24px 0;
 
   @include max-width($landscape-tablet) {
     margin-top: 30px;
-    background-color: #eeeeee;
+    background-color: #eee;
   }
 }
 
 .sub-menu-left {
   @include flex-between;
+
   width: 47%;
 
   @include max-width($landscape-tablet) {
@@ -309,6 +311,7 @@ $landscape-desktop: 1200px;
 
 .sub-menu-right {
   @include flex-between;
+
   width: 47%;
 
   @include max-width($landscape-tablet) {
@@ -320,7 +323,7 @@ $landscape-desktop: 1200px;
   font-family: $font-openSans;
   font-size: 24px;
   font-weight: 600;
-  color: #333333;
+  color: #333;
   margin-bottom: 24px;
 }
 
@@ -372,5 +375,5 @@ $landscape-desktop: 1200px;
   font-size: 18px;
   font-weight: bold;
   text-align: center;
-  color: #ffffff;
+  color: #fff;
 }
