--- a/client/src/components/Search/Search.scss
+++ b/client/src/components/Search/Search.scss
@@ -1,9 +1,8 @@
-@import '../../scss/resources/resources';
+@import "../../scss/resources/resources";
 
 .main-search {
-  max-width: 224px;
-  width: 100%;
-  //opacity: 0.2;
+  width: 224px;
+  opacity: 0.2;
   border-radius: 16px;
   background-color: #d8d8d8;
   padding: 4px 0 4px 19px;
@@ -13,10 +12,10 @@
   color: $black;
   border: none;
   outline: none;
-
   margin-right: 25px;
+  transition: all 0.5s linear;
 
-  @include max-width($landscape-tablet){
+  @include max-width($landscape-tablet) {
     display: none;
   }
 }
