--- a/client/src/components/ProductsCarousel/ProductsCarousel.scss
+++ b/client/src/components/ProductsCarousel/ProductsCarousel.scss
@@ -1,15 +1,9 @@
+@import "../../scss/reset.scss";
+@import "../../scss/resources/resources.scss";
+
 .products-carousel {
   margin: 0 auto;
-}
-
-.slider-wrapper.axis-horizontal {
-  width: 30%;
-}
-
-.slider {
-  display: flex;
-  align-items: center;
-  width: 50%;
+  text-align: center;
 }
 
 .carousel .slide {
@@ -20,29 +14,56 @@
   position: relative;
 }
 
-.price {
-  position: absolute;
-  left: 30px;
-  top: 30px;
-  color:  #33333a;
-  font-family: OpenSans, sans-serif;
-  font-size: 24px;
-  border: 1px solid #33333a;
-  border-radius: 500px;
-  padding: 40px 10px;
+.carousel-item {
+  img {
+    height: auto;
+  }
+
+  .price {
+    position: absolute;
+    left: 30px;
+    top: 30px;
+    color: $black;
+    font-size: 24px;
+    border: 1px solid $black;
+    border-radius: 500px;
+    padding: 40px 10px;
+  }
 }
 
-.carousel-item img {
-  height: auto;
+.carousel .slide {
+
+  .info {
+    letter-spacing: 2px;
+    color: $black;
+    font-size: 40px;
+    font-weight: bold;
+    position: absolute;
+    top: 25%;
+    left: 70%;
+    width: 30%;
+    text-align: left;
+  }
+
+  .carousel-btn {
+    position: absolute;
+    top: 50%;
+    left: 70%;
+    width: 200px;
+    height: 40px;
+    border-radius: 100px;
+    border: 1px solid $black;
+    background: transparent;
+    letter-spacing: 1.4px;
+    font-size: 18px;
+    color: $black;
+
+    &:hover {
+      cursor: pointer;
+      color: $red;
+      border-color: $red;
+      transition: all 0.3s ease;
+    }
+  }
 }
 
-.carousel .slide .legend {
-  background: #33333a;
-  border-radius: 100px;
-  font-family: OpenSans, sans-serif;
-  letter-spacing: 1.4px;
-}
-
-.carousel .control-dots .dot {
-  background: #33333a;
-}
