--- a/client/src/components/TopBlockAuth/LoginForm/LoginForm.scss
+++ b/client/src/components/TopBlockAuth/LoginForm/LoginForm.scss
@@ -4,115 +4,117 @@
   align-items: center;
   margin: auto;
   position: absolute;
-  top: 0;
   left: 0;
-  // bottom: 0;
   right: 0;
   z-index: 1;
-  width: 615px;
-  height: 606px;
+  width: 515px;
+  height: 506px;
   font-size: 14px;
   border: 1px solid black;
   background-color: #fff;
   color: #030303;
+}
 
-  .cancel-btn {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background: url("https://img.icons8.com/ios/50/000000/delete-sign.png")
-      no-repeat;
-    background-position: 7.5px 7px;
-    background-size: 15px;
-    background-color: rgba(0, 0, 0, 0.08);
-    align-self: flex-end;
-    margin: 15px 15px 0;
-    cursor: pointer;
-  }
+.cancel-btn {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: url("https://img.icons8.com/ios/50/000000/delete-sign.png") no-repeat;
+  background-position: 7.5px 7px;
+  background-size: 15px;
+  background-color: rgba(0, 0, 0, 0.08);
+  align-self: flex-end;
+  margin: 15px 15px 0;
+  cursor: pointer;
+}
 
-  .login-menu_header {
-    width: 555px;
-    font-size: 32px;
-    font-weight: bold;
-    line-height: 1.34;
-    text-align: center;
-  }
+.login-menu_header {
+  width: 555px;
+  font-size: 28px;
+  font-weight: bold;
+  line-height: 1.34;
+  text-align: center;
+}
 
-  .login-menu_par {
-    width: 323px;
-    height: 44px;
-    font-size: 14px;
-    font-weight: 600;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.57;
-    letter-spacing: normal;
-    text-align: center;
-    color: #33333a;
-    margin-top: 20px;
-  }
+.login-menu_par {
+  width: 323px;
+  font-size: 14px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.57;
+  letter-spacing: normal;
+  text-align: center;
+  color: #33333a;
+  margin-top: 10px;
+}
 
-  &_form {
-    display: flex;
-    margin-top: 40px;
+.login-menu_form {
+  display: flex;
+  margin-top: 20px;
+}
 
-    .form-email_par {
-      width: 323px;
-      height: 22px;
-      font-size: 14px;
-    }
+.form-email_par {
+  width: 323px;
+  height: 22px;
+  font-size: 14px;
+}
 
-    &-fields {
-      width: 396px;
+.login-menu_form-fields {
+  width: 396px;
+}
 
-      input {
-        width: 396px;
-        height: 40px;
-        margin: 5px 0 15px 0;
-        padding-left: 10px;
-        border: 1px solid #eaeaea;
-        outline: none;
-      }
-    }
+.login-form-field{
+  width: 396px;
+  height: 40px;
+  margin: 5px 0 15px 0;
+  padding-left: 10px;
+  border: 1px solid #eaeaea;
+  outline: none;
+}
 
-    .form-pass_par {
-      width: 323px;
-      height: 22px;
-      font-size: 14px;
-    }
-  }
+.form-pass_par {
+  width: 323px;
+  height: 22px;
+  font-size: 14px;
+}
 
-  .enter_btn {
-    width: 270px;
-    height: 50px;
-    border-radius: 25px;
-    background-color: #33333a;
-    border: 1px solid #33333a;
-    text-align: center;
-    cursor: pointer;
-    padding-top: 17px;
-    color: #fff;
-    text-transform: uppercase;
-    margin-top: 40px;
-  }
 
-  .registration-area {
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.08);
-    height: 110px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 35px;
+.enter_btn {
+  width: 270px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: #33333a;
+  border: 1px solid #33333a;
+  text-align: center;
+  cursor: pointer;
+  padding-top: 17px;
+  color: #fff;
+  text-transform: uppercase;
+  margin-top: 30px;
+}
 
-    .register_btn {
-      margin-top: 0;
-      background-color: rgba(0, 0, 0, 0.08);
-      color: #33333a;
-    }
-  }
+.registration-area {
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.08);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
+}
+
+.register_btn {
+  margin-top: 0;
+  background-color: rgba(0, 0, 0, 0.08);
+  color: #33333a;
 }
 
 .d-none {
   display: none;
+}
+
+.red-color {
+  color: red;
+  font-size: 12px;
 }
