--- a/client/src/components/CategoryCarousel/CategoryCarousel.scss
+++ b/client/src/components/CategoryCarousel/CategoryCarousel.scss
@@ -25,6 +25,7 @@
 
   .category-item {
     max-width: 263px;
+    max-height: 370px;
     width: 100%;
     position: relative;
     margin-bottom: 10px;
@@ -44,6 +45,8 @@
 
   .category-img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     max-width: 263px;
   }
 
