--- a/client/src/components/CategoryCarousel/CategoryCarousel.scss
+++ b/client/src/components/CategoryCarousel/CategoryCarousel.scss
@@ -29,7 +29,7 @@
     position: relative;
     margin-bottom: 10px;
 
-    @media (max-width: $landscape-tablet){
+    @media (max-width: $landscape-tablet) {
       width: 47%;
     }
 
@@ -66,7 +66,7 @@
     font-weight: 600;
     letter-spacing: 2px;
     text-align: center;
-    color: #ffffff;
+    color: #fff;
     text-transform: uppercase;
     background-color: #31363d;
     padding: 11px 50px;
