--- a/client/src/components/Preloader/preloader.scss
+++ b/client/src/components/Preloader/preloader.scss
@@ -1,5 +1,5 @@
 .universal-preloader {
-  border: 10px solid #cccccc;
+  border: 10px solid #ccc;
   border-radius: 50%;
   border-top: 10px solid #ff6008;
   width: 70px;
@@ -11,6 +11,7 @@
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
