--- a/client/src/components/Header/NavMenu/navMenu.scss
+++ b/client/src/components/Header/NavMenu/navMenu.scss
@@ -35,7 +35,7 @@
 }
 
 .main-menu-list .main-menu-item:last-child {
-  margin-right: 0px;
+  margin-right: 0;
 }
 
 @media (max-width: 992px) {
@@ -44,6 +44,7 @@
     width: calc(100% / 3);
     text-align: center;
   }
+
   .main-menu-list .main-menu-item:hover {
     background-color: #e3ffca;
   }
@@ -56,6 +57,7 @@
   color: #33333a;
   text-transform: uppercase;
   transition: all 0.3s ease;
+
   &:hover {
     color: #ff6008;
   }
@@ -73,7 +75,7 @@
   height: 16px;
 }
 
-/*===========================================*/
+/* =========================================== */
 
 .sub-menu-wrapper {
   background-color: #fff;
@@ -81,7 +83,7 @@
   position: absolute;
   left: 0;
   top: 96px;
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 1px solid #ccc;
   z-index: 10000;
 
   @include max-width($landscape-tablet) {
@@ -130,6 +132,7 @@
   color: #333;
   margin-bottom: 24px;
   transition: all 0.3s ease;
+
   &:hover {
     color: #ff6008;
   }
@@ -158,6 +161,7 @@
   color: $black;
   text-transform: uppercase;
   transition: all 0.3s ease;
+
   &:hover {
     color: #ff6008;
   }
