--- a/client/src/components/ProductListing/ProductListing.scss
+++ b/client/src/components/ProductListing/ProductListing.scss
@@ -17,6 +17,7 @@
 
   &-products {
     @include flex-wrap-between;
+
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -33,7 +34,6 @@
 
 
 .listing-products {
-
   .product-item {
     display: block;
     max-width: 263px;
@@ -42,8 +42,8 @@
     margin-bottom: 25px;
 
     &:hover {
-      box-shadow: 0px 0px 10px 10px #ccc;
-      background-color: #ffffff;
+      box-shadow: 0 0 10px 10px #ccc;
+      background-color: #fff;
     }
 
     @include max-width($landscape-tablet) {
