--- a/client/src/components/Subscribe/Subscribe.scss
+++ b/client/src/components/Subscribe/Subscribe.scss
@@ -49,7 +49,7 @@
       letter-spacing: 1.4px;
       line-height: 42px;
       text-align: center;
-      color: #ffffff;
+      color: #fff;
       outline: none;
     }
   }
