--- a/client/src/components/TopBlockAuth/RegistrationForm/RegistrationForm.scss
+++ b/client/src/components/TopBlockAuth/RegistrationForm/RegistrationForm.scss
@@ -18,7 +18,8 @@
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background: url("https://img.icons8.com/ios/50/000000/delete-sign.png")
+    background:
+      url("https://img.icons8.com/ios/50/000000/delete-sign.png")
       no-repeat;
     background-position: 7.5px 7px;
     background-size: 15px;
