--- a/client/src/components/ProductPage/PhotoGallery/photo-gallery.scss
+++ b/client/src/components/ProductPage/PhotoGallery/photo-gallery.scss
@@ -16,6 +16,7 @@
     width: 68px;
     height: 68px;
     margin-bottom: 20px;
+    display: none;
 
     @include max-width($landscape-tablet) {
       margin-right: 12px;
