--- a/client/src/components/FilteredProductList/Filters/SizeFilter/sizeFilter.scss
+++ b/client/src/components/FilteredProductList/Filters/SizeFilter/sizeFilter.scss
@@ -1,4 +1,4 @@
-.css-10nd86i {
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
+// .css-10nd86i {
+//   margin-top: 100px;
+//   margin-bottom: 100px;
+// }
