Filters func part1 (#69)
* Products and Navogation Menu at backend

* Carousel endpoints

* Nav-menu component. Part 1

* Navigation menu component with redux store, the first part

* Navigation Menu onMouseOver depends on overed category

* New Product Structure

* fixed db pruduct structure

* New product photos, adding products to db, fixing product object structure etc.

* Fixing of bags from browser console and some comments on code for team

* Header styling and bag-fixing

* Styling bag fix

* Admin Dashboard initial commit

* Fix Adm

* AdmRoutes

* Admin Dashboard for nav menu part 1

* NavMenu Admin Dashboard with full functionality

* Components FilteredProductList and Filters without functionality of filtration

* Back-end for filter items

* Filters. Part1

--- a/client/src/components/FilteredProductList/filteredProductList.scss
+++ b/client/src/components/FilteredProductList/filteredProductList.scss
@@ -26,3 +26,15 @@
     }
   }
 }
+
+.product-price {
+  display: inline-block;
+}
+
+.previous-price {
+  display: inline-block;
+  margin-left: 30px;
+  font-size: 13px;
+  color: gray;
+  text-decoration: line-through;
+}
