--- a/client/src/components/Footer/footer.scss
+++ b/client/src/components/Footer/footer.scss
@@ -7,13 +7,14 @@
 .footer-list {
   @include flex-between;
 
-  padding: 45px 0 134px;
+  padding: 45px 0;
   color: #fff;
 
   @include max-width($landscape-tablet) {
     flex-direction: column;
     align-items: center;
   }
+
 }
 
 .footer-column {
