--- a/client/src/components/Subscribe/Subscribe.scss
+++ b/client/src/components/Subscribe/Subscribe.scss
@@ -1,56 +1,90 @@
-.subscribe-section {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin: 50px 0;
+@import '../../scss/resources/resources';
 
+.section-subscribe {
+  padding: 65px 0;
+}
 
-  .subscribe-text {
-    font-family: OpenSans, sans-serif;
+.subscribe {
+  @include flex-center-between;
+
+  @include max-width($landscape-tablet) {
+    flex-direction: column;
+  }
+
+  &-title {
+    font-family: $font-openSans;
     font-size: 38px;
     font-weight: 600;
     color: #31363d;
+    margin-right: 24px;
+
+    @include max-width($landscape-tablet){
+      margin-right: 0;
+      margin-bottom: 10px;
+    }
   }
 
-  .subscribe-info {
-    font-family: OpenSans, sans-serif;
+  &-description {
+    width: 243px;
+    font-family: $font-openSans;
     font-size: 14px;
-    color: #31363d;
     line-height: 1.36;
-    text-align: left;
+    color: #31363d;
+
+    @include max-width($landscape-tablet) {
+      width: 100%;
+      margin-bottom: 20px;
+      text-align: center;
+    }
   }
 
-  .input-form {
+  &-form {
     display: flex;
+    max-width: 658px;
+    width: 100%;
 
-    .input-email__text {
-      margin-right: 30px;
-      width: 270px;
-      height: 43px;
-      background-color: #d8d8d8;
-      opacity: 0.2;
-      border-radius: 22px;
-      outline: none;
-      border: none;
-      padding-left: 15px;
-      font-family: SFProText, sans-serif;
-      font-size: 14px;
-      font-weight: 600;
+    @include max-width($landscape-tablet){
+      flex-direction: column;
+      margin-bottom: 10px;
+      justify-content: center;
+      align-items: center;
     }
 
-    .subscribe-button {
-      width: 300px;
-      height: 42px;
-      border: none;
-      cursor: pointer;
-      border-radius: 100px;
-      background-color: #33333a;
-      font-weight: bold;
-      letter-spacing: 1.4px;
-      line-height: 42px;
-      text-align: center;
-      color: #fff;
-      outline: none;
+  }
+
+  &-email {
+    border: none;
+    outline: none;
+    max-width: 318px;
+    width: 100%;
+    border-radius: 22px;
+    padding: 15px;
+    background-color: $grey-light;
+    margin-right: 39px;
+
+    @include max-width($landscape-tablet){
+      margin-right: 0;
+      margin-bottom: 10px;
     }
+  }
+
+  &-btn {
+    max-width: 300px;
+    width: 100%;
+    padding: 12px 0;
+    border-radius: 100px;
+    background-color: $black;
+
+    font-family: $font-openSans;
+    font-size: 13px;
+    font-weight: bold;
+    text-align: center;
+    letter-spacing: 1.4px;
+    text-transform: uppercase;
+    color: #ffffff;
+    border: none;
+    outline: none;
+    cursor: pointer;
+
   }
 }
