--- a/client/src/components/ProductsCarousel/ProductsCarousel.scss
+++ b/client/src/components/ProductsCarousel/ProductsCarousel.scss
@@ -1,4 +1,3 @@
-@import "../../scss/reset.scss";
 @import "../../scss/resources/resources.scss";
 
 .products-carousel {
@@ -15,6 +14,8 @@
 }
 
 .carousel-item {
+  position: relative;
+
   img {
     height: auto;
   }
@@ -28,6 +29,20 @@
     border: 1px solid $black;
     border-radius: 500px;
     padding: 40px 10px;
+
+    @include max-width($landscape-tablet) {
+      left: 20px;
+      top: 20px;
+      font-size: 18px;
+      padding: 27px 5px;
+    }
+
+    @include max-width($landscape-mobile-big) {
+      left: 20px;
+      top: 15px;
+      font-size: 14px;
+      padding: 23px 5px;
+    }
   }
 }
 
@@ -42,6 +57,14 @@
     left: 70%;
     width: 30%;
     text-align: left;
+
+    @include max-width($landscape-tablet) {
+      font-size: 20px;
+    }
+
+    @include max-width($landscape-mobile-big) {
+      font-size: 12px;
+    }
   }
 
   .carousel-btn {
@@ -62,6 +85,18 @@
       color: $red;
       border-color: $red;
       transition: all 0.3s ease;
+    }
+
+    @include max-width($landscape-tablet) {
+      width: 120px;
+      height: 30px;
+      font-size: 14px;
+    }
+
+    @include max-width($landscape-mobile-big) {
+      width: 80px;
+      height: 20px;
+      font-size: 10px;
     }
   }
 }
